# interview-flow

./: .gitignore  README.md  application-flow.md  code-change-blue-print.md  docker-compose.yml  main.py  plan_dynamic_experience.txt  pyproject.toml  pytest.ini  readme2.md
services/adaptivity_service/: __init__.py  ability_model.py
services/ai_orchestration_service/: .env  .env.example  Dockerfile  __init__.py  ai_gateway.py  ai_orchestration.py  config.py  llm_router_config.yml  personas.py  pyproject.toml  sample_data_repo.py  schemas.py
services/ai_orchestration_service/app/: main.py
services/ai_orchestration_service/app/api/v1/: router.py
services/ai_orchestration_service/app/api/v1/endpoints/: interview.py
services/ai_orchestration_service/app/core/: config.py
services/ai_orchestration_service/app/schemas/: interview.py
services/ai_orchestration_service/app/services/: llm_service.py  topic_service.py
services/ai_orchestration_service/session_service/: __init__.py  database.py  interview_state.py  report.py  service.py
services/ai_orchestration_service/tests/: test_ai_orchestration.py  test_app_api.py  test_interview_api.py  test_llm_timeout.py  test_report.py  test_session_state.py
services/analytics_service/: __init__.py  item_metrics.py
services/api_service/: Dockerfile  pyproject.toml
services/api_service/app/: main.py
services/app_test_service/: __init__.py  service.py
services/common/: logging_config.py  skill_inventory.py
services/evidence_service/: __init__.py  artifact_ingest.py  resume_parser.py
services/gateway_service/: .env.example  __init__.py  ai_gateway.py  config.py  llm_router_config.yml
services/guardrails_service/: __init__.py  filters.py
services/interview_services/: Dockerfile  ai_interview_service.py  config.py  interview_session_service.py  pyproject.toml
services/interview_services/app/: main.py
services/interview_services/data/: samples.db
services/interview_services/tests/: test_ai_interview_service.py  test_app_api.py  test_interview_session_service.py
services/interview_session_service/: .env  Dockerfile  config.py  database.py  interview_state.py  pyproject.toml  schemas.py  service.py
services/interview_session_service/app/: main.py
services/interviewer_service/: __init__.py  interviewer.py
services/monitor_service/: __init__.py  monitor.py
services/orchestrator_service/: __init__.py  flow.py  followups.py  llm_api.py  orchestrator.py  schemas.py
services/question_service/: __init__.py  generator.py  question_bank.py
services/sample_data_service/: __init__.py  sample_data_repo.py
services/sandbox_service/: __init__.py  code_runner.py  sql_runner.py
services/scoring_service/: __init__.py  scoring_engine.py
services/session_service/: database.py  interview_state.py  question_log_db.py  report.py  service.py
services/storage_service/: __init__.py  storage.py
services/tests/: conftest.py  test_app_api.py  test_app_test_service.py  test_end_to_end.py  test_flow.py  test_followups.py  test_json_repair.py  test_llm_api.py  test_question_log_db.py  test_report.py  test_session_state.py  test_skip_prompts.py  test_stage0_analysis.py
services/verification_service/: __init__.py  prober.py
session_frontend/: chat.html  chat.js  index.html
test_frontend/: app.js  chat.html  chat.js  index.html  style.css
(+13 files in other folders)
