[project]
name = "interview-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.35.0",
    "PyYAML>=6.0.2",
    "fpdf2>=2.7.0",
    "dspy-ai>=3.0.0",
    "langgraph>=0.6.7",
]

[project.optional-dependencies]
test_dependencies = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
