[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_orchestration_service"
version = "0.1.0"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "uvicorn>=0.35.0",
]

# --- New Section for Application Settings ---
[tool.settings]
llm_provider = "local"
openai_api_key = ""
openai_model = "gpt-3.5-turbo"
gemini_api_key = ""
local_llm_url = "http://localhost:11434/api/generate"
llm_timeout = 10.0